@@ -7,6 +7,7 @@ import com.cgcpms.auth.context.UserContext;
 import com.cgcpms.common.exception.BusinessException;
 import com.cgcpms.system.entity.*;
 import com.cgcpms.system.mapper.*;
+import com.cgcpms.system.role.SystemRoleContract;
 import com.cgcpms.system.vo.SysUserVO;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -20,6 +21,7 @@ import java.util.Collections;
 import java.util.Set;
 import java.util.List;
 import java.util.Map;
+import java.util.LinkedHashSet;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -29,8 +31,6 @@ import java.util.stream.Collectors;
 public class SysUserService {
 
     private static final Set<String> ALLOWED_STATUSES = Set.of("ENABLE", "DISABLE");
-    private static final Set<String> ADMIN_ROLE_CODES = Set.of("ADMIN", "SUPER_ADMIN");
-
     private final SysUserMapper sysUserMapper;
     private final SysUserRoleMapper sysUserRoleMapper;
     private final SysRoleMapper sysRoleMapper;
@@ -49,6 +49,11 @@ public class SysUserService {
         }
         wrapper.eq(SysUser::getTenantId, tenantId);
         if (roleId != null) {
+            SysRole filterRole = sysRoleMapper.selectById(roleId);
+            if (filterRole == null || !tenantId.equals(filterRole.getTenantId())
+                    || !SystemRoleContract.isVisible(filterRole.getRoleCode())) {
+                throw new BusinessException("ROLE_NOT_FOUND", "角色不存在");
+            }
             wrapper.exists("""
                     SELECT 1
                     FROM sys_user_role ur
@@ -189,49 +194,59 @@ public class SysUserService {
         if (user == null || !user.getTenantId().equals(UserContext.getCurrentTenantId()))
             throw new BusinessException("USER_NOT_FOUND", "用户不存在");
 
-        // 禁止自我提权
+        List<Long> normalizedRoleIds = roleIds == null
+                ? List.of()
+                : roleIds.stream().filter(java.util.Objects::nonNull).distinct().toList();
+        List<SysRole> roles = normalizedRoleIds.isEmpty()
+                ? List.of()
+                : sysRoleMapper.selectByIds(normalizedRoleIds);
+        Long currentTenantId = UserContext.getCurrentTenantId();
+        if (roles.size() != normalizedRoleIds.size()
+                || roles.stream().anyMatch(role -> !currentTenantId.equals(role.getTenantId())
+                        || !"ENABLE".equals(role.getStatus())
+                        || !SystemRoleContract.isVisible(role.getRoleCode()))) {
+            throw new BusinessException("ROLE_NOT_FOUND", "部分角色不存在或不可分配");
+        }
+
         Long currentUserId = UserContext.getCurrentUserId();
-        if (currentUserId != null && currentUserId.equals(userId)) {
+        if (currentUserId != null && currentUserId.equals(userId)
+                && !SystemRoleContract.isFinanceAdministrator(UserContext.getCurrentRoles())) {
             throw new BusinessException("SELF_ROLE_ASSIGN_FORBIDDEN", "不能给自己分配角色");
         }
 
         // 获取当前操作者的最高角色等级
         int operatorMaxLevel = getCurrentUserMaxRoleLevel();
 
-        // Verify all roles belong to current tenant and validate role level
-        if (roleIds != null && !roleIds.isEmpty()) {
-            List<SysRole> roles = sysRoleMapper.selectByIds(roleIds);
-            if (roles.size() != roleIds.size())
-                throw new BusinessException("ROLE_NOT_FOUND", "部分角色不存在");
-            Long currentTenantId = UserContext.getCurrentTenantId();
-            for (SysRole role : roles) {
-                if (!currentTenantId.equals(role.getTenantId()))
-                    throw new BusinessException("ROLE_NOT_FOUND", "角色不存在");
-                // 检查角色等级：只能授予 <= 自己等级的角色（数字越小等级越高）
-                int targetLevel = role.getRoleLevel() != null ? role.getRoleLevel() : 2;
-                if (targetLevel < operatorMaxLevel) {
-                    throw new BusinessException("ROLE_LEVEL_DENIED",
-                            "无权授予角色: " + role.getRoleName() + "（等级不足）");
-                }
+        for (SysRole role : roles) {
+            int targetLevel = role.getRoleLevel() != null ? role.getRoleLevel() : 2;
+            if (targetLevel < operatorMaxLevel) {
+                throw new BusinessException("ROLE_LEVEL_DENIED",
+                        "无权授予角色: " + role.getRoleName() + "（等级不足）");
             }
         }
 
         boolean currentlyAdmin = hasAdministratorRole(userId, user.getTenantId());
-        boolean willRemainAdmin = roleIds != null && roleIds.stream().anyMatch(roleId -> isAdministratorRole(roleId, user.getTenantId()));
+        boolean willRemainAdmin = roles.stream()
+                .anyMatch(role -> SystemRoleContract.COMPANY_FINANCE.equals(role.getRoleCode()));
         if (currentlyAdmin && !willRemainAdmin) requireAdministratorContinuity(userId, user.getTenantId());
+
+        LinkedHashSet<Long> persistedRoleIds = new LinkedHashSet<>(normalizedRoleIds);
+        if (willRemainAdmin) {
+            persistedRoleIds.add(requireRoleByCode(user.getTenantId(),
+                    SystemRoleContract.HIDDEN_SUPER_ADMIN).getId());
+        }
 
         sysUserRoleMapper.delete(new LambdaQueryWrapper<SysUserRole>()
                 .eq(SysUserRole::getTenantId, user.getTenantId())
                 .eq(SysUserRole::getUserId, userId));
-        if (roleIds != null) {
-            for (Long roleId : roleIds) {
+        for (Long roleId : persistedRoleIds) {
                 SysUserRole ur = new SysUserRole();
                 ur.setTenantId(user.getTenantId());
                 ur.setUserId(userId);
                 ur.setRoleId(roleId);
                 sysUserRoleMapper.insert(ur);
-            }
         }
+        requirePairedAdministratorRoles(userId, user.getTenantId());
     }
 
     /**
@@ -275,7 +290,34 @@ public class SysUserService {
 
     private boolean isAdministratorRole(Long roleId, Long tenantId) {
         SysRole role = sysRoleMapper.selectById(roleId);
-        return role != null && tenantId.equals(role.getTenantId()) && ADMIN_ROLE_CODES.contains(role.getRoleCode());
+        return role != null && tenantId.equals(role.getTenantId())
+                && SystemRoleContract.HIDDEN_SUPER_ADMIN.equals(role.getRoleCode());
+    }
+
+    private SysRole requireRoleByCode(Long tenantId, String roleCode) {
+        SysRole role = sysRoleMapper.selectOne(new LambdaQueryWrapper<SysRole>()
+                .eq(SysRole::getTenantId, tenantId)
+                .eq(SysRole::getRoleCode, roleCode)
+                .eq(SysRole::getStatus, "ENABLE")
+                .last("LIMIT 1")); // SQL-SAFETY: fixed-sql-fragment
+        if (role == null) throw new BusinessException("ROLE_PAIR_MISSING", "公司财务与超级管理员角色配置不完整");
+        return role;
+    }
+
+    private void requirePairedAdministratorRoles(Long userId, Long tenantId) {
+        Set<String> codes = sysUserRoleMapper.selectList(new LambdaQueryWrapper<SysUserRole>()
+                        .eq(SysUserRole::getTenantId, tenantId)
+                        .eq(SysUserRole::getUserId, userId))
+                .stream()
+                .map(SysUserRole::getRoleId)
+                .map(sysRoleMapper::selectById)
+                .filter(java.util.Objects::nonNull)
+                .map(SysRole::getRoleCode)
+                .collect(Collectors.toSet());
+        if (codes.contains(SystemRoleContract.COMPANY_FINANCE)
+                != codes.contains(SystemRoleContract.HIDDEN_SUPER_ADMIN)) {
+            throw new BusinessException("ROLE_PAIR_INVARIANT_VIOLATION", "公司财务与超级管理员角色必须成对绑定");
+        }
     }
 
     private void requireAdministratorContinuity(Long excludedUserId, Long tenantId) {
@@ -295,8 +337,11 @@ public class SysUserService {
         if (userRoles.isEmpty()) return Collections.emptyMap();
         List<Long> roleIds = userRoles.stream().map(SysUserRole::getRoleId).distinct().toList();
         var roleMap = sysRoleMapper.selectByIds(roleIds).stream()
+                .filter(role -> SystemRoleContract.isVisible(role.getRoleCode()))
                 .collect(Collectors.toMap(SysRole::getId, SysRole::getRoleName));
-        return userRoles.stream().collect(Collectors.groupingBy(
+        return userRoles.stream()
+                .filter(ur -> roleMap.containsKey(ur.getRoleId()))
+                .collect(Collectors.groupingBy(
                 SysUserRole::getUserId,
                 Collectors.mapping(ur -> roleMap.get(ur.getRoleId()), Collectors.toList())));
     }
@@ -308,7 +353,15 @@ public class SysUserService {
                         .eq(SysUserRole::getTenantId, UserContext.getCurrentTenantId())
                         .in(SysUserRole::getUserId, userIds));
         if (userRoles.isEmpty()) return Collections.emptyMap();
-        return userRoles.stream().collect(Collectors.groupingBy(
+        Set<Long> visibleRoleIds = sysRoleMapper.selectByIds(
+                        userRoles.stream().map(SysUserRole::getRoleId).distinct().toList())
+                .stream()
+                .filter(role -> SystemRoleContract.isVisible(role.getRoleCode()))
+                .map(SysRole::getId)
+                .collect(Collectors.toSet());
+        return userRoles.stream()
+                .filter(ur -> visibleRoleIds.contains(ur.getRoleId()))
+                .collect(Collectors.groupingBy(
                 SysUserRole::getUserId,
                 Collectors.mapping(SysUserRole::getRoleId, Collectors.toList())));
     }
@@ -321,6 +374,7 @@ public class SysUserService {
         if (userRoles.isEmpty()) return Collections.emptyList();
         List<Long> roleIds = userRoles.stream().map(SysUserRole::getRoleId).toList();
         return sysRoleMapper.selectByIds(roleIds).stream()
+                .filter(role -> SystemRoleContract.isVisible(role.getRoleCode()))
                 .map(SysRole::getRoleName)
                 .collect(Collectors.toList());
     }
@@ -331,6 +385,14 @@ public class SysUserService {
                         .eq(SysUserRole::getTenantId, UserContext.getCurrentTenantId())
                         .eq(SysUserRole::getUserId, userId));
         if (userRoles.isEmpty()) return Collections.emptyList();
-        return userRoles.stream().map(SysUserRole::getRoleId).collect(Collectors.toList());
+        Set<Long> visibleRoleIds = sysRoleMapper.selectByIds(
+                        userRoles.stream().map(SysUserRole::getRoleId).distinct().toList())
+                .stream()
+                .filter(role -> SystemRoleContract.isVisible(role.getRoleCode()))
+                .map(SysRole::getId)
+                .collect(Collectors.toSet());
+        return userRoles.stream().map(SysUserRole::getRoleId)
+                .filter(visibleRoleIds::contains)
+                .collect(Collectors.toList());
     }
 }
